--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,7 +4,7 @@
     <title>Perlin noise flow field</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon"type="image/x-icon" href="data:image/x-icon;,">
-    <style>html, body { width: 100%; height: 100%; padding: 0; margin: 0; }</style>
+    <style>html, body, #sketch { width: 100%; height: 100%; padding: 0; margin: 0; }</style>
 </head>
 <body>
 <div id="sketch"></div>
